--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 TELEGRAM_BOT_TOKEN=8485347720:AAFLzTZwtYt5iPhlozSujuQuDl3ZiBWx2Ck
 TELEGRAM_CHAT_ID=5079735559
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=http://mazharul-portfolio.vercel.app
 GMAIL_USER=mishehab35@gmail.com
 GMAIL_PASS=ielualokcdexfveh
